# alert-manager

./: .dockerignore  .env.example  .envrc  .envrc.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/images/: how-it-works.drawio
src/alert_manager/: cli.py  config.py  exceptions.py  logger.py  main.py  wsgi.py
src/alert_manager/bot/: app.py  handlers.py
src/alert_manager/entities/: alert_metadata.py
src/alert_manager/enums/: grafana.py
src/alert_manager/libs/: asyncio_utils.py  itertools.py  security.py  sentry.py  structlog_utils.py  text.py
src/alert_manager/services/: alert_filter.py  alert_filter_backend.py  auth.py
src/alert_manager/services/slack/: exceptions.py  message.py
src/alert_manager/web/: middleware.py  views.py
src/alert_manager/web/entities/: grafana.py  slack.py
tests/: conftest.py  fixtures.py
tests/data/: legacy_alerts.json
tests/libs/: itertools_test.py  security_test.py  structlog_utils_test.py  text_test.py
tests/services/: alert_filter_backend_test.py
tests/services/slack/: message_test.py
tests/web/: views_test.py
