[project]
name = "alert-manager"
version = "0.1.0"
description = "Slack bot for managing notifications from Grafana."
authors = [
    {name = "Aleksey Petrunnik", email = "petrunnik.a@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.9.0",
    "aiohttp-deps>=1.0.2",
    "slack-sdk>=3.26.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "pydantic-settings-vault>=2.0.0",
    "click>=8.1.7",
    "redis>=5.0.1",
    "structlog>=23.2.0",
    "sentry-sdk>=1.30.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "types-redis>=4.6.0.11",
    "freezegun>=1.2.2",
    "fakeredis>=2.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["./src"]
testpaths = ["tests"]

[tool.black]
target_version = ["py311"]
line-length = 100
skip_string_normalization = true

[tool.ruff]
select = [
    "A",    # flake8-builtins
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "RUF",  # ruff
]
ignore = [
    "E501",  # line too long, handled by black
    "A003",  # class attribute {name} is shadowing a python builtin
    "C409",  # rewrite tuple() -> ()
]
target-version = "py311"
isort = { known-first-party = ['alert_manager', 'tests'] }

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
python_version = "3.11"
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = false
exclude = "tests"
