[project]
name = "alert-manager"
version = "0.1.0"
description = "Slack bot for managing notifications from Grafana."
authors = [
    {name = "Aleksey Petrunnik", email = "petrunnik.a@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.9.0",
    "aiohttp-deps>=1.0.2",
    "slack-sdk>=3.26.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "pydantic-settings-vault>=2.0.0",
    "click>=8.1.7",
    "redis>=5.0.1",
    "structlog>=23.2.0",
    "sentry-sdk>=1.30.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.1,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "types-redis>=4.6.0.11",
    "freezegun>=1.2.2",
    "fakeredis>=2.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["./src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "T20",  # flake8-print
    "C90",  # flake8-complexity (mccabe)
    "UP",   # pyupgrade
    "RUF",  # ruff
    "S",    # flake8-bandit
]
ignore = [
    "A003",  # class attribute {name} is shadowing a python builtin
    "S101",  # use of assert detected
]

[tool.ruff.lint.isort]
known-first-party = ["alert_manager", "tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
no_implicit_optional = false
