[project]
name = "alert-manager"
version = "0.1.0"
description = "Slack bot for managing notifications from Grafana."
authors = [
    {name = "Aleksey Petrunnik", email = "petrunnik.a@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "aiohttp[speedups]>=3.13.2,<3.14",
    "aiohttp-deps>=1.1.4,<1.2",
    "slack-sdk>=3.39.0,<3.40",
    "pydantic>=2.12.5,<2.13",
    "pydantic-settings>=2.12.0,<2.13",
    "pydantic-settings-vault>=2.1.1,<2.2",
    "click>=8.3.1,<8.4",
    "redis>=7.1.0,<7.2",
    "structlog>=25.5.0,<25.6",
    "sentry-sdk>=2.47.0,<2.48",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<8.4",
    "pytest-asyncio>=1.1.0,<1.2",
    "pytest-aiohttp>=1.1.0,<1.2",
    "pytest-mock>=3.15.1,<3.16",
    "pytest-cov>=7.0.0,<7.1",
    "coverage>=7.12.0,<7.13",
    "mypy>=1.19.0,<1.20",
    "pre-commit>=4.5.0,<4.6",
    "freezegun>=1.5.5,<1.6",
    "fakeredis>=2.32.1,<2.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["./src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "T20",  # flake8-print
    "C90",  # flake8-complexity (mccabe)
    "UP",   # pyupgrade
    "RUF",  # ruff
    "S",    # flake8-bandit
]
ignore = [
    "A003",  # class attribute {name} is shadowing a python builtin
    "S101",  # use of assert detected
]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
no_implicit_optional = false
